src/main/kotlin/com/example/frontServer/dto/error/MSAServerErrorResponse.kt
package com.example.frontServer.dto.error


open class MSAServerErrorResponse(
    open val errorDetails: MSAServerErrorDetails?,
    open val errorCode: Int
)